--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<button type="submit" class="btn btn-danger col-md-2 m-3" data-bs-toggle="modal" data-bs-target="#formModal">Sign up</button>
+<button type="submit" class="btn btn-danger col-md-2 m-3" data-bs-toggle="modal" data-bs-target="#formModal">Sign Up</button>
 
 
 <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
@@ -16,7 +16,7 @@
       <div class="modal-content row">
         <div class="row modal-header">
             <h5 class="modal-title col-md-10 mb-3" id="formModalLabel">Create Account</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">close</button>
             <hr class="m-3">
         <div class="modal-body">
         <form>
