--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
       <div class="modal-content row">
         <div class="row modal-header">
             <h5 class="modal-title col-md-10 mb-3" id="formModalLabel">Create Account</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" id="close" aria-label="close">close</button>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" id="close" aria-label="close">.close</button>
             <hr class="m-3">
         <div class="modal-body">
         <form>
