--- a/main.html
+++ b/main.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		   .custom-close-btn {
+      background-color: transparent;
+      border: none;
+      font-size: 1.5rem;
+      color: #6c757d;
+      cursor: pointer;
+      transition: color 0.3s;
+    }
+    .custom-close-btn:hover {
+      color: #dc3545;
+    }
+	</style>
 </head>
 <body>
 
@@ -16,7 +29,7 @@
       <div class="modal-content row">
         <div class="row modal-header">
             <h5 class="modal-title col-md-10 mb-3" id="formModalLabel">Create Account</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" id="close" aria-label="close">.close</button>
+          <button type="button" class="custom-close-btn" data-bs-dismiss="modal" aria-label="Close">&times;</button>
             <hr class="m-3">
         <div class="modal-body">
         <form>
