--- a/main.html
+++ b/main.html
@@ -6,17 +6,9 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<style>
-		   .custom-close-btn {
-      background-color: transparent;
-      border: none;
-      font-size: 1.5rem;
-      color: #6c757d;
-      cursor: pointer;
-      transition: color 0.3s;
-    }
-    .custom-close-btn:hover {
-      color: #dc3545;
-    }
+		 .close {
+			 display: grid;
+		 } 
 	</style>
 </head>
 <body>
@@ -29,7 +21,7 @@
       <div class="modal-content row">
         <div class="row modal-header">
             <h5 class="modal-title col-md-10 mb-3" id="formModalLabel">Create Account</h5>
-          <button type="button" class="custom-close-btn" data-bs-dismiss="modal" aria-label="Close">&times;</button>
+          <button type="button" id="close" class="custom-close-btn" data-bs-dismiss="modal" aria-label="Close"></button>
             <hr class="m-3">
         <div class="modal-body">
         <form>
